// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should return ExpenseSummary with 1 expense 1`] = `
<div>
  <h2>
    Viewing 
    1
     
    expense
     totalling 
    $10.00
  </h2>
</div>
`;

exports[`should return ExpenseSummary with multiple expenses 1`] = `
<div>
  <h2>
    Viewing 
    13
     
    expenses
     totalling 
    $193,710,458.23
  </h2>
</div>
`;
